Move tvcm/__init__.js to tvcm.html AND make it a dependency
In the old system, tvcm/__init__.js was brought in manually by
the bootstrap code. This isn't very component like. In this patch,
HTMLModule is updated to complain if tvcm is not somehow referenced by
a file containing tvcm.exportTo. This allows all bootstrap lines of
tvcm/__init__.js to be removed.

--- a/trunk/examples/skia_debugger.html
+++ b/trunk/examples/skia_debugger.html
@@ -8,7 +8,8 @@ found in the LICENSE file.
 <head>
 <title>Skia Debugger</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script src="/tvcm/__init__.js"></script>
+<link rel="import" href="/cc/picture.html">
+<link rel="import" href="/cc/picture_debugger.html">
 <script src="string_convert.js"></script>
 <style>
   picture-ops-list-view {
@@ -23,12 +24,6 @@ found in the LICENSE file.
   </div>
 
   <div class="view"></div>
-
-  <script>
-  'use strict';
-  tvcm.require('cc.picture');
-  tvcm.require('cc.picture_debugger');
-  </script>
   <script>
   'use strict';
 
