--- a/trunk/trace_viewer/tracing/analysis/analysis_results.html
+++ b/trunk/trace_viewer/tracing/analysis/analysis_results.html
@@ -4,9 +4,9 @@ Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
 <link rel="stylesheet" href="/tracing/analysis/analysis_results.css">
 
+<link rel="import" href="/tvcm/ui.html">
 <link rel="import" href="/tracing/analysis/util.html">
 <link rel="import" href="/tracing/analysis/analysis_link.html">
 <link rel="import" href="/tracing/analysis/generic_object_view.html">
@@ -410,4 +410,3 @@ tvcm.exportTo('tracing.analysis', function() {
   };
 });
 </script>
-
