--- a/trunk/examples/chrome_inspect_test_shell.html
+++ b/trunk/examples/chrome_inspect_test_shell.html
@@ -8,7 +8,7 @@ found in the LICENSE file.
 <head>
 <title>chrome://inspect test shell</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script src="/tvcm/__init__.js"></script>
+<link rel="import" href="/about_tracing/profiling_view.html">
 <style>
   body {
     margin: 0;
@@ -32,11 +32,6 @@ found in the LICENSE file.
 </style>
 </head>
 <body>
-  <script>
-  'use strict';
-
-  tvcm.require('about_tracing.profiling_view');
-  </script>
   <script>
   'use strict';
 
