--- a/trunk/trace_viewer/cc/picture_ops_chart_summary_view.html
+++ b/trunk/trace_viewer/cc/picture_ops_chart_summary_view.html
@@ -5,6 +5,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
+<link rel="import" href="/tvcm.html">
 <link rel="stylesheet" href="/cc/picture_ops_chart_summary_view.css">
 
 <script>
