--- a/trunk/trace_viewer/tracing/analysis/stub_analysis_table.html
+++ b/trunk/trace_viewer/tracing/analysis/stub_analysis_table.html
@@ -5,6 +5,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 
+<link rel="import" href="/tvcm.html">
 <script>
 'use strict';
 
@@ -45,4 +46,3 @@ tvcm.exportTo('tracing.analysis', function() {
   };
 });
 </script>
-
