--- a/trunk/trace_viewer/tracing/analysis/util.html
+++ b/trunk/trace_viewer/tracing/analysis/util.html
@@ -4,7 +4,7 @@ Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm.html">
 <script>
 'use strict';
 
@@ -21,4 +21,3 @@ tvcm.exportTo('tracing.analysis', function() {
   };
 });
 </script>
-
