--- a/trunk/trace_viewer/tracing/filter.html
+++ b/trunk/trace_viewer/tracing/filter.html
@@ -4,7 +4,7 @@ Copyright (c) 2012 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm.html">
 <script>
 'use strict';
 
@@ -84,4 +84,3 @@ tvcm.exportTo('tracing', function() {
   };
 });
 </script>
-
