--- a/trunk/trace_viewer/tracing/importer/etw/parser.html
+++ b/trunk/trace_viewer/tracing/importer/etw/parser.html
@@ -4,7 +4,7 @@ Copyright (c) 2014 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm.html">
 <script>
 'use strict';
 
@@ -82,4 +82,3 @@ tvcm.exportTo('tracing.importer.etw', function() {
   };
 });
 </script>
-
