--- a/trunk/trace_viewer/tracing/importer/v8/log_reader.html
+++ b/trunk/trace_viewer/tracing/importer/v8/log_reader.html
@@ -4,7 +4,7 @@ Copyright (c) 2012 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm.html">
 <script>
 'use strict';
 
@@ -211,4 +211,3 @@ tvcm.exportTo('tracing.importer.v8', function() {
   };
 });
 </script>
-
