--- a/trunk/trace_viewer/tracing/trace_model.html
+++ b/trunk/trace_viewer/tracing/trace_model.html
@@ -4,7 +4,7 @@ Copyright (c) 2012 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm.html">
 <link rel="import" href="/tracing/filter.html">
 <link rel="import" href="/tracing/importer/importer.html">
 <link rel="import" href="/tracing/importer/task.html">
@@ -570,4 +570,3 @@ tvcm.exportTo('tracing', function() {
   };
 });
 </script>
-
