--- a/trunk/trace_viewer/tracing/tracks/track.html
+++ b/trunk/trace_viewer/tracing/tracks/track.html
@@ -4,7 +4,7 @@ Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
-
+<link rel="import" href="/tvcm/ui.html">
 <link rel="stylesheet" href="/tracing/tracks/track.css">
 
 <script>
@@ -144,4 +144,3 @@ tvcm.exportTo('tracing.tracks', function() {
   };
 });
 </script>
-
