Polymerize find-control.
This converts the HTML module of find-control to be a Polymer Element.

R=nduca@chromium.org

Review URL: https://codereview.appspot.com/116130043

--- a/trunk/trace_viewer/tracing/find_control_test.html
+++ b/trunk/trace_viewer/tracing/find_control_test.html
@@ -13,14 +13,10 @@ found in the LICENSE file.
 
 tvcm.unittest.testSuite('tracing.find_control_test', function() {
   test('instantiate', function() {
-    var ctl = new tracing.FindControl();
+    var ctl = new TracingFindControl();
     ctl.controller = {
-      findNext: function() {
-      },
-
-      findPrevious: function() {
-      },
-
+      findNext: function() { },
+      findPrevious: function() { },
       reset: function() {},
 
       filterHits: ['a', 'b'],
