--- a/trunk/trace_viewer/tracing/find_controller_test.html
+++ b/trunk/trace_viewer/tracing/find_controller_test.html
@@ -7,6 +7,7 @@ found in the LICENSE file.
 
 <link rel="import" href="/tracing/find_controller.html">
 <link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
 
 <script>
 'use strict';
