--- a/trunk/trace_viewer/about_tracing/profiling_view.html
+++ b/trunk/trace_viewer/about_tracing/profiling_view.html
@@ -16,43 +16,41 @@ found in the LICENSE file.
 <link rel="import" href="/tvcm/ui/info_bar.html">
 <link rel="import" href="/tvcm/ui/overlay.html">
 
+<style>
+x-profiling-view {
+  -webkit-flex-direction: column;
+  display: -webkit-flex;
+  padding: 0;
+}
+
+x-profiling-view .controls #save-button {
+  margin-left: 64px !important;
+}
+
+x-profiling-view .controls #upload-button {
+  display: none;
+}
+
+x-profiling-view > x-timeline-view {
+  -webkit-flex: 1 1 auto;
+}
+</style>
+
 <template id="profiling-view-template">
-  <style>
-  x-profiling-view-container {
-    -webkit-flex-direction: column;
-    display: -webkit-flex;
-    padding: 0;
-  }
-
-  x-profiling-view-container .controls #save-button {
-    margin-left: 64px !important;
-  }
-
-  x-profiling-view-container .controls #upload-button {
-    display: none;
-  }
-
-  x-profiling-view-container > x-timeline-view {
-    -webkit-flex: 1 1 auto;
-  }
-  </style>
-
-  <x-profiling-view-container>
-    <x-info-bar-group></x-info-bar-group>
-    <x-timeline-view>
-      <x-timeline-view-buttons>
-        <button id="record-button">Record</button>
-        <span id="monitoring-elements">
-          <input id="monitor-checkbox" type="checkbox">
-          <label for="monitor-checkbox">Monitoring</label></input>
-          <button id="capture-button">Capture Monitoring Snapshot</button>
-        </span>
-        <button id="save-button">Save</button>
-        <button id="upload-button">Upload</button>
-        <button id="load-button">Load</button>
-      </x-timeline-view-buttons>
-    </x-timeline-view>
-  </x-profiling-view-container>
+  <x-info-bar-group></x-info-bar-group>
+  <x-timeline-view>
+    <x-timeline-view-buttons>
+      <button id="record-button">Record</button>
+      <span id="monitoring-elements">
+        <input id="monitor-checkbox" type="checkbox">
+        <label for="monitor-checkbox">Monitoring</label></input>
+        <button id="capture-button">Capture Monitoring Snapshot</button>
+      </span>
+      <button id="save-button">Save</button>
+      <button id="upload-button">Upload</button>
+      <button id="load-button">Load</button>
+    </x-timeline-view-buttons>
+  </x-timeline-view>
 </template>
 
 <script>
