--- a/trunk/trace_viewer/tracing/find_control_test.html
+++ b/trunk/trace_viewer/tracing/find_control_test.html
@@ -13,14 +13,10 @@ found in the LICENSE file.
 
 tvcm.unittest.testSuite(function() {
   test('instantiate', function() {
-    var ctl = new tracing.FindControl();
+    var ctl = new TracingFindControl();
     ctl.controller = {
-      findNext: function() {
-      },
-
-      findPrevious: function() {
-      },
-
+      findNext: function() { },
+      findPrevious: function() { },
       reset: function() {},
 
       filterHits: ['a', 'b'],
