--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -8,6 +8,8 @@ found in the LICENSE file.
 <head>
 <title>Simple Embedded Viewer</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script src="/platform.min.js"></script>
+<script src="/polymer.min.js"></script>
 <link rel="import" href="/tracing/timeline_view.html">
 <link rel="import" href="/tracing/importer.html">
 <link rel="import" href="/cc.html">
