Remove Promises polyfill and update callsites
trace-viewer was using an ancient Promise polyfill. This updates
to ES6 promises, which involves a few tweaks:
- resolver -> resolve, reject
- fulfill -> resolve
- Promise.any -> Promise.race

--- a/trunk/trace_viewer/about_tracing/inspector_connection.html
+++ b/trunk/trace_viewer/about_tracing/inspector_connection.html
@@ -51,8 +51,11 @@ tvcm.exportTo('about_tracing', function() {
       });
       InspectorFrontendHost.sendMessageToBackend(msg);
 
-      return new Promise(function(resolver) {
-        this.pendingRequestResolversId_[id] = resolver;
+      return new Promise(function(resolve, reject) {
+        this.pendingRequestResolversId_[id] = {
+          resolve: resolve,
+          reject: reject
+        };
       }.bind(this));
     },
 
