Revert r1336: Add thread-level highlight instant events
This patch reverts r1336[1] which added thread-level highlight instant
events. Due to the idle time on the main thread, we will need to use
an async-based approach for frames.

The original author should have listened to dsinclair from the get-go!

[1] https://code.google.com/p/trace-viewer/source/detail?r=1336

R=dsinclair@chromium.org, nduca@chromium.org

Review URL: https://codereview.appspot.com/121810043

--- a/trunk/trace_viewer/tracing/trace_model/instant_event.html
+++ b/trunk/trace_viewer/tracing/trace_model/instant_event.html
@@ -17,8 +17,7 @@ tvcm.exportTo('tracing.trace_model', function() {
   var InstantEventType = {
     GLOBAL: 1,
     PROCESS: 2,
-    THREAD: 3,
-    THREAD_HIGHLIGHT: 4
+    THREAD: 3
   };
 
   function InstantEvent(category, title, colorId, start, args) {
@@ -66,20 +65,10 @@ tvcm.exportTo('tracing.trace_model', function() {
     __proto__: InstantEvent.prototype
   };
 
-  function ThreadHighlightInstantEvent(category, title, colorId, start, args) {
-    InstantEvent.apply(this, arguments);
-    this.type = InstantEventType.THREAD_HIGHLIGHT;
-  };
-
-  ThreadHighlightInstantEvent.prototype = {
-    __proto__: InstantEvent.prototype
-  };
-
   return {
     GlobalInstantEvent: GlobalInstantEvent,
     ProcessInstantEvent: ProcessInstantEvent,
     ThreadInstantEvent: ThreadInstantEvent,
-    ThreadHighlightInstantEvent: ThreadHighlightInstantEvent,
 
     InstantEventType: InstantEventType,
     InstantEvent: InstantEvent
