--- a/trunk/trace_viewer/tracing/side_panel/timeline_view_test.html
+++ b/trunk/trace_viewer/tracing/side_panel/timeline_view_test.html
@@ -11,7 +11,7 @@ found in the LICENSE file.
 <script>
 'use strict';
 
-tvcm.testSuite(function() {
+tvcm.unittest.testSuite(function() {
   var TimelineViewSidePanel = tracing.TimelineViewSidePanel;
   var TimelineViewSidePanelContainer = tracing.TimelineViewSidePanelContainer;
 
