Remove a spurious scrollbar on the new record dialog ui
I primarily use OSX which has overlay scrollbars and didn't notice that
the new record dialog has an ugly scrollbar on linux. This patch
removes it.

R=nduca,chrishtr
TBR=nduca

Review URL: https://codereview.appspot.com/119360045

--- a/trunk/trace_viewer/about_tracing/record_selection_dialog.html
+++ b/trunk/trace_viewer/about_tracing/record_selection_dialog.html
@@ -29,6 +29,7 @@ found in the LICENSE file.
     max-height: 0;
     max-width: 0;
     opacity: 0;
+    overflow: hidden;
   }
 
   .categories-selection {
